--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:image:width" content="100" />
 <meta property="og:image:height" content="100" />
 <meta property="og:image:alt" content="Diabetes mellitus: Symptoms, risk factors, types, and treatment of Diabetes" />
-<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:card" content="summary" />
 <meta name="twitter:description" content="What is diabetes? Here’s what you need to know about diabetes mellitus, one of the most common conditions in the world, and its symptoms, types, and treatment." />
 <meta name="twitter:title" content="Diabetes mellitus: Symptoms, risk factors, types, and treatment of Diabetes" />
 <meta name="twitter:image" content="https://www.accu-chek.com/sites/g/files/papvje226/files/styles/thumbnail/public/2024-08/What%20is%20diabetes%20THUMBNAIL%20500x500.jpg?itok=w6F1Olew" />
